[package]
name = "longinus"
version = "0.1.0"
authors = ["saltbo <saltbo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.6"
futures = "0.3.1"
bytes = "0.5.3"
timer = "0.2.0"
chrono = "0.4.11"
openssl = { version = "0.10", features = ["v110"] }

vmess = { path = "./vmess", version = "0.1.0" }