[package]
name = "vmess"
version = "0.1.0"
authors = ["saltbo <saltbo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
bytes = "0.5.3"
rust-crypto = "0.2"

oh-my-rust = { git = "https://github.com/ylxdzsw/oh-my-rust" }
