[package]
name = "vmess2"
version = "0.1.0"
authors = ["saltbo <saltbo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"

oh-my-rust = { git = "https://github.com/ylxdzsw/oh-my-rust" }